k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: YOUR_DOCKER_USERNAME/auth-service:latest # CHANGE THIS
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
