k8s/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification
        image: YOUR_DOCKER_USERNAME/notification-service:latest # CHANGE THIS
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
